[project]
name = "tinypid"
version = "0.1"

requires-python = ">=3.8"
authors = [
  {name = "Alexander Steppke", email = "asteppke@gmail.com"},
]

description = "Tiny PID controller"
readme = "README.md"
license = {file = "LICENSE.txt"}
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]

classifiers = [
  "Programming Language :: Python"
]

[tool.pytest.ini_options]
pythonpath = ["."]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

